# OTRS_Monitoring

./: .env-non-dev.sample  .gitignore  README.md  config.py  connections.py  killer.py  main.py  pyproject.toml  telegram.py  tickets.py
