[tool.poetry]
name = "otrs_monitoring"
version = "0.1.0"
description = ""
authors = ["kot <bafomet2016vitt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyOTRS = "^1.1.1"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
